test/scc/stmt/semantic-errors/054.a
054.t:7:9: error: multiple default labels in one switch